development/ml-sectest-framework/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ml-sectest
  labels:
    name: ml-sectest
    environment: production
    app: ml-sectest-framework
